Fixing gap

--- a/sass/sections/_section6.scss
+++ b/sass/sections/_section6.scss
@@ -5,6 +5,7 @@
 		width: 110vw;
 		position: relative;
 		left: -5vw;
+		height: 25vh;
 		background-color: $color-bg;
 	}
 	&-body {
